<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小黄人之家</string>
    <string name="action_settings">Settings</string>
    
    
    <string name="login_title_text">用户登录</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="remember_password_cb">记住密码</string>
    <string name="login_btn">登录</string>
    <string name="register_tv"><u>注册</u></string>
    
    
    <string name="register_title_tv">用户注册</string>
    <string name="register_username_hint">请输入用户名</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="register_repassword_hint">请再次输入密码</string>
    <string name="register_btn">注       册</string>
    
    <string name="main_title_tv">宾馆管理</string>
    <string name="main_checkin_btn">办理入住</string>
    <string name="main_checkinmsg_btn">入住信息</string>
    <string name="main_exit_btn">办理退房</string>
    <string name="main_exitmsg_btn">退房信息</string>
    
    <string name="roomtype_single_room_btn">单人间</string>
    <string name="roomtype_double_room_btn">双人间</string>
    <string name="roomtype_standard_single_btn">标准间</string>
    <string name="roomtype_business_double_btn">商务间</string>
    
    <string name="roominfo_title_tv">房间信息</string>
    <string name="roominfo_room_type">房间类型：</string>
     <string name="roominfo_room_preview">房间预览：</string>
    <string name="roominfo_room_price">房间价格：</string>
    <string name="roominfo_room_detail">房间详情：</string>
     <string name="roominfo_roomno_select">请选择房间号：</string>
    <string name="roominfo_submit_btn">提     交</string>
    
    <string name="check_in_title_tv">入住登记</string>
    <string name="check_in_msg_roomnum">房间号码：</string>
    <string name="check_in_msg_roomprice">房间价格：</string>
    <string name="check_in_msg_name">房客姓名：</string>
    <string name="check_in_msg_name_hint">请输入房客姓名</string>
    <string name="check_in_msg_id_number">身份证号：</string>
    <string name="check_in_msg_id_number_hint">请输入房客身份证号</string>
    <string name="check_in_msg_sex">房客性别：</string>
    <string name="check_in_msg_time">入住时间：</string>
    <string name="check_in_confirm_btn">确\t\t认</string>
    <string name="checked_in_info">入住信息</string>
    <string name="checked_info_textview">未查到该房客的信息</string>
</resources>
