<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/check_in_msg_roomnum"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_room_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center|left"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <View style="@style/EditTextLineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/check_in_msg_roomprice"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_room_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center|left"
            android:text=""
            android:textSize="18sp" />
    </LinearLayout>

    <View style="@style/EditTextLineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/check_in_msg_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/check_in_msg_name_hint" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <View style="@style/EditTextLineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/check_in_msg_id_number"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_id_num"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/check_in_msg_id_number_hint" >
        </EditText>
    </LinearLayout>

    <View style="@style/EditTextLineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/check_in_msg_sex"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/rg_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5" 
            android:gravity="center|left"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="男" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="女" />
        </RadioGroup>

    </LinearLayout>
    <View style="@style/EditTextLineStyle" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textview1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/check_in_msg_time"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_check_in_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center|left"
            android:text=""
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_fresh_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="2"
            android:background="@drawable/login_button_bg"
            android:text="更新\n时间" 
            android:textSize="14sp"
            android:textColor="#ffffff"/>

    </LinearLayout>
</LinearLayout>