<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#F9A51B"
        android:gravity="center"
        android:text="@string/register_title_tv"
        android:textColor="#ffffff"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/login_user"
                android:paddingTop="14dp"
                android:paddingBottom="14dp" />

            <EditText
                android:id="@+id/et_username"
                style="@style/LoginEditTextStyle" 
                android:hint="@string/register_username_hint">
               <requestFocus />
            </EditText>

        </LinearLayout>
        
        <View style="@style/EditTextLineStyle"/>"
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:orientation="horizontal" >
           <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/login_pwd" 
        android:paddingTop="14dp"
        android:paddingBottom="14dp"/>
            <EditText
                android:id="@+id/et_password"
                style="@style/LoginEditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/register_password_hint" />
                 
        </LinearLayout>
        <View style="@style/EditTextLineStyle"  />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:orientation="horizontal" >
           <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/login_pwd" 
        android:paddingTop="14dp"
        android:paddingBottom="14dp"/>
            <EditText
                android:id="@+id/et_repassword"
               style="@style/LoginEditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/register_repassword_hint" />
                 
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_bg"
        android:text="@string/register_btn"
        android:textColor="#ffffff" 
        android:textSize="20sp"/>

</RelativeLayout>