<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:background="#F9A51B"
        android:text="@string/roominfo_title_tv" 
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#ffffff"/>
    <LinearLayout
        android:id="@+id/ll_room_info"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textview1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/roominfo_room_type"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_room_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|left"
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

        <View style="@style/EditTextLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|top"
                android:text="@string/roominfo_room_preview"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5" >

                <ImageView
                    android:id="@+id/iv_img_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/room_img01" />

                <ImageView
                    android:id="@+id/iv_img_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/room_img02" />
                
            </LinearLayout>
            
        </LinearLayout>

        <View style="@style/EditTextLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/roominfo_room_price"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_room_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|left"
                android:text=""
                android:textSize="18sp" 
                android:textColor="#ff0000"/>
        </LinearLayout>

        <View style="@style/EditTextLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center|top"
                android:text="@string/roominfo_room_detail"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_room_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                
                android:text=""
                android:textSize="18sp" />
        </LinearLayout>

        <View style="@style/EditTextLineStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:text="@string/roominfo_roomno_select"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <RadioGroup
                android:id="@+id/rg_select_room_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_room_num01"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:button="@null"
                    android:gravity="center"
                    android:background="@drawable/roominfo_roomnum_selector_radiogroup"
                    
                    android:layout_margin="1dp"
                    android:text="101" />

                <RadioButton
                    android:id="@+id/rb_room_num02"
                     android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:background="@drawable/roominfo_roomnum_selector_radiogroup"
                    android:text="102" />

                <RadioButton
                    android:id="@+id/rb_room_num03"
                     android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:background="@drawable/roominfo_roomnum_selector_radiogroup"
                    android:text="103" />

                <RadioButton
                    android:id="@+id/rb_room_num04"
                     android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_margin="1dp"
                    android:gravity="center"
                    android:background="@drawable/roominfo_roomnum_selector_radiogroup"
                    android:text="104" />

                <RadioButton
                    android:id="@+id/rb_room_num05"
                     android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:button="@null"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_margin="1dp"
                    android:background="@drawable/roominfo_roomnum_selector_radiogroup"
                    android:text="105" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
    <Button 
        android:id="@+id/btn_select_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_room_info"
        android:layout_alignRight="@id/ll_room_info"
        android:layout_below="@id/ll_room_info"
        android:background="@drawable/login_button_bg"
        android:layout_marginTop="60dp"
        android:text="@string/roominfo_submit_btn"/>
    

</RelativeLayout>